dnl -*- Autoconf -*-

AC_INIT(guile-parsack, 0.5.0)
AC_CONFIG_SRCDIR(parsack)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([gnu color-tests -Wall -Wno-portability])
AM_SILENT_RULES([yes])

AC_CONFIG_FILES([
Makefile
src/Makefile
doc/Makefile
examples/Makefile
tests/Makefile
])

GUILE_PROGS([2.0.11])

AC_OUTPUT
